# vulkan_rust

./: .gitignore  Cargo.toml  README.md  TODO.md  movement.txt  shell.nix
.run/: Compile Shaders.run.xml  Profile.run.xml  Run Debug space_ship_builder_v3.run.xml  Run Release  space_ship_builder.run.xml  Run Release  space_ship_builder_v6.run.xml  Run space_ship_builder.run.xml  Run space_ship_builder_v5 Release.run.xml  Run space_ship_builder_v5.run.xml  Run space_ship_builder_v6.run.xml  compile shader.run.xml  fmt space_ship_builder_v3.run.xml  fmt.run.xml  profile debug.run.xml  profile release.run.xml  shader space_ship_builder_v3.run.xml
backup/: Scene.glb
crates/examples/comp_mandelbulb/: Cargo.toml
crates/examples/comp_mandelbulb/shaders/: mandelblub.comp
crates/examples/comp_mandelbulb/src/: main.rs
crates/examples/comp_ray_caster/: Cargo.toml
crates/examples/comp_ray_caster/shaders/: build_tree.comp  load_tree.comp  ray_caster.comp
crates/examples/comp_ray_caster/src/: debug.rs  main.rs  materials.rs  octtree.rs  octtree_builder.rs  octtree_controller.rs  octtree_loader.rs  renderer.rs
crates/examples/octree_builder/: Cargo.toml
crates/examples/octree_builder/src/: main.rs
crates/examples/octtree_builder_v2/: Cargo.toml
crates/examples/octtree_builder_v2/src/: main.rs  octtree.rs  template.rs
crates/examples/space_ship_builder/: Cargo.toml
crates/examples/space_ship_builder/shaders/: shader.frag  shader.vert
crates/examples/space_ship_builder/src/: Rotation.rs  builder.rs  main.rs  math.rs  mesh.rs  node.rs  renderer.rs  rotation.rs  rule.rs  ship.rs  ship_mesh.rs  voxel.rs  voxel_loader.rs
crates/examples/space_ship_builder_v3/: Cargo.toml
crates/examples/space_ship_builder_v3/assets/models/: space_ship_config_v3.json  space_ship_v3.vox
crates/examples/space_ship_builder_v3/shaders/: chunk.frag  shader.frag  shader.vert
crates/examples/space_ship_builder_v3/src/: builder.rs  debug.rs  main.rs  math.rs  node.rs  pattern_config.rs  renderer.rs  rotation.rs  ship.rs  ship_mesh.rs  ship_renderer.rs  voxel_loader.rs
crates/examples/space_ship_builder_v3/src/debug/: line_renderer.rs  mod.rs  text_renderer.rs  wave_renderer.rs
crates/examples/space_ship_builder_v4/: Cargo.toml
crates/examples/space_ship_builder_v4/assets/models/: space_ship.vox
crates/examples/space_ship_builder_v4/shaders/: chunk.frag
crates/examples/space_ship_builder_v4/src/: builder.rs  main.rs  math.rs  node.rs  rotation.rs  ship.rs  voxel_loader.rs
crates/examples/space_ship_builder_v4/src/debug/: mod.rs
crates/examples/voxel_renderer_v2/: Cargo.toml
crates/examples/voxel_renderer_v2/shaders/: ray_caster.comp
crates/examples/voxel_renderer_v2/src/: main.rs  node.rs  octtree.rs  octtree_controller.rs  renderer.rs
crates/libs/octtree_v2/: Cargo.toml
crates/libs/octtree_v2/src/: aabb.rs  builder.rs  converter.rs  lib.rs  load.rs  metadata.rs  node.rs  reader.rs  save.rs  template.rs  tree.rs  util.rs
libs/lagecy/app/: Cargo.toml
libs/lagecy/app/src/: gui.rs  lib.rs
libs/octtree/: Cargo.toml
libs/octtree/src/: lib.rs
libs/octtree/src/basic_octtree/: sphere.rs
libs/octtree/src/file/: metadata.rs  mod.rs  save.rs  util.rs
libs/octtree_v2/: Cargo.toml
libs/octtree_v2/src/: aabb.rs  builder.rs  converter.rs  lib.rs  metadata.rs  node.rs  reader.rs  template.rs  tree.rs  util.rs
litature/: liks.txt
projects/gpu_particles/: Cargo.toml
projects/gpu_particles/shaders/: shader.comp
projects/space_ship_builder_v2/: Cargo.toml
projects/space_ship_builder_v2/assets/models/: space_ship_config_v2.json
projects/space_ship_builder_v2/shaders/: shader.vert
projects/space_ship_builder_v2/src/: main.rs  math.rs  node.rs  pattern_config.rs  renderer.rs  ship.rs  ship_mesh.rs
projects/space_ship_builder_v8/: Cargo.toml
projects/space_ship_builder_v8/assets/: space_ship.vox
projects/space_ship_builder_v8/shader_includes/: dda.glsl  debug.glsl  node.glsl  ray.glsl
projects/space_ship_builder_v8/shaders/: chunk.frag  debug.vert  parallax.frag  parallax.vert  ray_caster.comp
projects/space_ship_builder_v8/src/: main.rs  math.rs  node.rs  rotation.rs  voxel_loader.rs
projects/space_ship_builder_v8/src/asteroid/: mod.rs
projects/space_ship_builder_v8/src/debug/: collapse_log.rs  hull_basic.rs  hull_multi.rs  line_renderer.rs  mod.rs  nodes.rs  rotation_debug.rs  text_renderer.rs
projects/space_ship_builder_v8/src/math/: aabb.rs  mod.rs  random.rs
projects/space_ship_builder_v8/src/render/: mesh.rs  mesh_renderer.rs  mod.rs
projects/space_ship_builder_v8/src/render/compute/: mod.rs  object.rs  renderer.rs
projects/space_ship_builder_v8/src/render/compute_raytracing/: compute_raytracing_data.rs  mod.rs  renderer.rs
projects/space_ship_builder_v8/src/render/parallax/: chunk.rs  mesh.rs  mod.rs  node_parallax_mesh.rs  renderer.rs
projects/space_ship_builder_v8/src/render/raytracer/: mod.rs  renderer.rs
projects/space_ship_builder_v8/src/rules/: ReqTree.rs  basic_blocks.rs  block.rs  empty.rs  hull.rs  marching_cubes.rs  mod.rs  req_tree.rs  solver.rs  stone.rs
projects/space_ship_builder_v8/src/ship/: builder.rs  data.rs  mod.rs  order.rs  possible_blocks.rs  renderer.rs  save.rs
projects/space_ship_builder_v8/src/world/: builder.rs  manager.rs  mod.rs  profile.rs  region.rs  save.rs
projects/space_ship_builder_v8/src/world/asteroid/: metaball.rs  mod.rs
projects/space_ship_builder_v8/src/world/block_object/: mod.rs  order.rs  possible_blocks.rs
projects/space_ship_builder_v8/src/world/data/: block.rs  mod.rs  node.rs  voxel_loader.rs
projects/space_ship_builder_v8/src/world/ship/: builder.rs  mod.rs  profile.rs  save.rs
projects/voxel_renderer_v2/: Cargo.toml  TODO.md
projects/voxel_renderer_v2/shaders/: ray_caster.comp
projects/voxel_renderer_v2/src/: main.rs  materials.rs  octtree_controller.rs  renderer.rs
scripts/: build_debug.sh  build_release.sh  compile_shaders.sh  compile_shaders_selected.sh  debug.ps1  debug.sh  fmt.sh  graph_dependencies.sh  profile.sh  profile_debug.sh  profile_release.sh  run.sh  (+6 more)
(+345 files in other folders)
