[workspace]
members = [
    "crates/examples/*",
    "crates/libs/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maarten Behn <maarten.behn@gmail.com>"]

[profile.release]
debug = true

[workspace.dependencies]
log = "0.4"
simplelog = "0.11.2"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
num_cpus = "1.13"
rand = "0.8"
rand_chacha = "0.3.1"
shuffle = "0.1.7"
noise = "0.8.2"
palette = "0.6.1"
indicatif = "0.17.3"

gltf = "1.0.0"
glam = { version = "0.22", features = ["serde"] }

winit = "0.27"
ash = { version = "0.37", features = ["linked"] }
ash-window = "0.12"
raw-window-handle = "0.5"
gpu-allocator = { version = "0.21", default-features = false, features = ["vulkan"] }

imgui = "0.9"
imgui-winit-support = "0.9"
imgui-rs-vulkan-renderer = { version = "1.6", features = ["gpu-allocator", "dynamic-rendering"] }



