[package]
name = "octtree"
version = "0.1.0"
edition = "2021"
authors = ["Maarten Behn <maarten.behn@gmail.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
app = { path = "../lagecy/app" }

# Print Progress bars etc
indicatif = "0.17.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# speedy = "0.8.6"
bincode = "1.3.3"

# Random
rand = "0.8"
rand_chacha = "0.3.1"
shuffle = "0.1.7"
noise = "0.8.2"

# Color
palette = "0.6.1"











