[package]
name = "octtree_v2"
version = "0.1.0"
edition = "2021"
authors = ["Maarten Behn <maarten.behn@gmail.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
octa-force = { git="https://github.com/MaartenBehn/octa-force-rs.git", version = "0.1.4" }
indicatif = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
speedy = "0.8.6"
