[package]
name = "gpu_particles"
version = "0.1.0"
edition = "2021"
authors = ["Maarten Behn <maarten.behn@gmail.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
octa-force = { git="https://github.com/MaartenBehn/octa-force-rs.git", tag = "0.1.4" }
# octa-force = { path="../../../../octa-force-rs" }

num_cpus = "1.13"
rand = "0.8"

