[package]
name = "space_ship_builder_v2"
version = "0.1.0"
edition = "2021"
authors = ["Maarten Behn <maarten.behn@gmail.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
octa-force = { git="https://github.com/MaartenBehn/octa-force-rs.git", tag = "0.1.4" }

serde_json = "1.0"
dot_vox = "5.1.1"
index_queue = "0.1.0"
block-mesh = "0.2.0"

