[package]
name = "voxel_renderer_v2"
version = "0.1.0"
edition = "2021"
authors = ["Maarten Behn <maarten.behn@gmail.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
app = { path = "../../libs/lagecy/app"}
octtree_v2 = { path = "../../libs/octtree_v2" }

rand = "0.8"
