[package]
name = "comp_mandelbulb"
version = "0.1.0"
edition = "2021"
authors = ["Maarten Behn <maarten.behn@gmail.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
octa-force = { git="https://github.com/MaartenBehn/octa-force-rs.git", version = "0.1.4" }
# octa-force = { path="../../../../octa-force-rs" }

# Print Progress bars etc
# indicatif = "0.17.3"

# Error
# thiserror = "1.0"

# Serilistaion
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# speedy = "0.8.6"
# bincode = "1.3.3"

# FPS
# num_cpus = "1.13"

# Random
# rand = "0.8"
# rand_chacha = "0.3.1"
# shuffle = "0.1.7"
# noise = "0.8.2"
# fastrand = "2.0"

# Color
# palette = "0.6.1"

# File loading
# gltf = "1.0.0"
# dot_vox = "5.1.1"

# Math
#index_queue = "0.1.0"

#block-mesh = "0.2.0"
