[package]
name = "comp_ray_caster"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
rand_chacha.workspace = true
shuffle.workspace = true
noise.workspace = true
palette.workspace = true

app = { path = "../../libs/app" }
gui = { path = "../../libs/gui" }
