[package]
name = "octtree_builder"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

app = { path = "../../libs/app" }
octtree = { path = "../../libs/octtree" }
