[package]
name = "octtree_builder_v2"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rand.workspace = true
rand_chacha.workspace = true
shuffle.workspace = true
noise.workspace = true
palette.workspace = true
indicatif.workspace = true

serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

app = { path = "../../libs/app" }
octtree_v2 = { path = "../../libs/octtree_v2" }