[package]
name = "space_ship_builder"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octa-force.workspace = true

fastrand.workspace = true
dot_vox.workspace = true
