[package]
name = "space_ship_builder_v3"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../../libs/app" }

dot_vox.workspace = true
serde_json.workspace = true
index_queue.workspace = true

