[package]
name = "space_ship_builder_v4"
version = "0.1.0"
edition = "2021"
authors = ["Maarten Behn <maarten.behn@gmail.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
octa-force = { git="https://github.com/MaartenBehn/octa-force-rs.git", version = "0.1.6" }
# octa-force = { path="../../../../octa-force-rs" }

serde_json = "1.0"
dot_vox = "5.1.1"
index_queue = "0.1.0"
block-mesh = "0.2.0"
neuroflow = "0.2.0"

