[package]
name = "voxel_renderer_v2"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../../libs/app" }
octtree_v2 = { path = "../../libs/octtree_v2" }

rand.workspace = true
