[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["Maarten Behn <maarten.behn@gmail.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
log.workspace = true
simplelog.workspace = true
anyhow.workspace = true
winit.workspace = true
glam.workspace = true
fps_clock.workspace = true
imgui.workspace = true
imgui-winit-support.workspace = true
imgui-rs-vulkan-renderer.workspace = true

vulkan = { path = "../vulkan" }
