[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["Maarten Behn <maarten.behn@gmail.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
# Logging
log = "0.4"
simplelog = "0.11.2"
indicatif = "0.17.3" # Log Progress bars etc

# Error
thiserror = "1.0"
anyhow = "1.0"

# Serilistaion
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
speedy = "0.8.6"
bincode = "1.3.3"

# FPS
num_cpus = "1.13"
fps_clock = "2.0"

# Random
rand = "0.8"
rand_chacha = "0.3.1"
shuffle = "0.1.7"
noise = "0.8.2"
fastrand = "2.0"

# Color
palette = "0.6.1"

# File loading
gltf = "1.0.0"
dot_vox = "5.1.1"

# Math
glam = { version = "0.22", features = ["serde"] }
index_queue = "0.1.0"

# Vulkan
winit = "0.27"
ash = { version = "0.37", features = ["linked"] }
ash-window = "0.12"
raw-window-handle = "0.5"
gpu-allocator = { version = "0.21", default-features = false, features = ["vulkan"] }

# Im Gui
imgui = "0.9"
imgui-winit-support = "0.9"
imgui-rs-vulkan-renderer = { version = "1.6.1", features = ["gpu-allocator", "dynamic-rendering"] }

vulkan = { path = "../vulkan" }
